# gans

./: pyproject.toml
notebooks/: GANdalf.ipynb
