[tool.poetry]
name = "gans"
version = "0.1.0"
description = ""
authors = ["chipfranzen <chip.franzen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.4.0"
numpy = "^1.19.5"
scipy = "^1.6.0"
scikit-learn = "^0.24.0"
jupyter = "^1.0.0"
ipython = "^7.19.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
